--- a/css/style3.css
+++ b/css/style3.css
@@ -1,6 +1,7 @@
 .main {
 	width: 100%;
 	//border: 1px solid #000;
+	font-size: 200%;
 	text-align: center;
 }
 .main div	{
@@ -13,6 +14,7 @@
 .title {
 	width: 100%;
 	//border: 1px solid #000;
+	font-size: 200%;
 	text-align: center;
 }
 
