--- a/css/search.css
+++ b/css/search.css
@@ -35,11 +35,11 @@ body {
 }
 
 .productArea {
-	-js-display: flex;
-	display: -webkit-box;
-	display: -webkit-flex;
+	//-js-display: flex;
+	//display: -webkit-box;
+	//display: -webkit-flex;
 	display: -ms-flexbox;
-	display: flex;
+	//display: flex;
 	-webkit-flex-wrap: wrap;
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
@@ -52,11 +52,11 @@ body {
 	color:#A4A4A4;
 }
 .productArea .product {
-	width: calc(33.333% - 20px);
-	margin: 10px 10px 20px 10px;
+	//width: calc(33.333% - 20px);
+	//margin: 10px 10px 20px 10px;
 }
 .productArea .product .photo {
-	margin-bottom: 10px;
+	//margin-bottom: 10px;
 }
 .productArea .product img {
 	width: 100%;
@@ -94,7 +94,7 @@ body {
 }
 
 /* ã‚¹ãƒžãƒ›ç‰ˆè¨­å®š */
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
 .filterArea{
 	width: 90%;
 	padding: 10px 10px 20px 10px;
@@ -108,4 +108,4 @@ body {
 .productArea .product {
 	width: calc(50% - 10px);
 	margin: 5px 5px 10px 5px;
-}
+} */
