--- a/css/modal2.css
+++ b/css/modal2.css
@@ -27,7 +27,7 @@
 
 .main {
 	width: 100%;
-	//border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	text-align: center;
 }
 
@@ -49,4 +49,11 @@
 .modal-close:hover {
     cursor:pointer;
     color:#f00;
+}
+
+.titleBer {
+	width: 100%;
+	/*border: 1px solid #000;*/
+	text-align: center;
+	font-family: 'PT Sans', sans-serif;
 }
