--- a/css/style3.css
+++ b/css/style3.css
@@ -1,53 +1,75 @@
 .main {
 	width: 100%;
-	//border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	font-size: 120%;
 	text-align: center;
+	font-family: 'PT Sans', sans-serif;
 }
 .main div	{
 	width: 395;
-	//border: 1px solid #FF0000;
+	/*border: 1px solid #FF0000;*/
 	margin: 0 auto;
 	text-align: left;
+	font-family: 'PT Sans', sans-serif;
 }
 
 .title {
 	width: 100%;
 	font-size: 200%;
-	//border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	text-align: center;
+	font-family: 'PT Sans', sans-serif;
 }
 
 .title div	{
 	width: 350;
-	//border: 1px solid #FF0000;
+	/*border: 1px solid #FF0000;*/
 	margin: 0 auto;
 	text-align: left;
+	font-family: 'PT Sans', sans-serif;
 }
 
 .titleBer {
 	width: 100%;
 	font-size: 160%;
-	//border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	text-align: center;
+	font-family: 'PT Sans', sans-serif;
 }
 
 .titleBer div	{
 	width: 350;
-	//border: 1px solid #FF0000;
+	/*border: 1px solid #FF0000;*/
 	margin: 0 auto;
 	text-align: center;
+	font-family: 'PT Sans', sans-serif;
 }
 
 .chgEng {
 	width: 100%;
-	//border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	font-size: 170%;
 	text-align: center;
+	font-family: 'PT Sans', sans-serif;
 }
 .chgEng div	{
 	width: 400;
-	//border: 1px solid #FF0000;
+	/*border: 1px solid #FF0000;*/
 	margin: 0 auto;
 	text-align: right;
+	font-family: 'PT Sans', sans-serif;
+}
+
+.chgJP {
+	width: 100%;
+	/*border: 1px solid #000;*/
+	text-align: center;
+	font-family: 'PT Sans', sans-serif;
+}
+.chgJP div	{
+	width: 450;
+	/*border: 1px solid #FF0000;*/
+	margin: 0 auto;
+	text-align: right;
+	font-family: 'PT Sans', sans-serif;
 }
